--- a/public/index.html
+++ b/public/index.html
@@ -45,16 +45,16 @@
         Enter the room code shared by the admin to watch the screen.
       </p>
       <div class="space-y-3">
-        <input
+        <!-- <input
           type="text"
           id="joinCode"
           placeholder="Enter Room Code"
-          class="w-full px-3.5 py-2.5 rounded-lg bg-slate-900 border border-slate-700 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 placeholder:text-slate-500" />
-        <button
+          class="w-full px-3.5 py-2.5 rounded-lg bg-slate-900 border border-slate-700 text-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 placeholder:text-slate-500" /> -->
+        <a
           class="w-full inline-flex justify-center items-center gap-2 px-4 py-2.5 rounded-lg bg-indigo-500 hover:bg-indigo-400 text-sm font-medium text-slate-950 transition"
-          onclick="joinRoom()">
+          href="viewer.html">
           Join Room
-        </button>
+        </a>
       </div>
     </div>
   </div>
